Minor improvements, some new APIs, nothing working really yet

--- a/ExtendedConsole/ExtendedConsole.csproj
+++ b/ExtendedConsole/ExtendedConsole.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Structs\MenuEventRecord.cs" />
     <Compile Include="Structs\MouseEventRecord.cs" />
     <Compile Include="Structs\SmallRect.cs" />
+    <Compile Include="Structs\StdStreamHandle.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
